--- a/index.html
+++ b/index.html
@@ -16,31 +16,20 @@
             font-size: 10px;
         }
 
-        body {
-            padding: 1rem;
+        img {
+            width: 300px;
+            display: block;
+            margin: 200px auto;
+            transition: transform 2s;
         }
 
-        button {
-            padding: 1rem 2rem;
-            background: royalblue;
-            color: white;
-            border: none;
-            outline: none;
-            cursor: pointer;
-            /* transition: background-color 3s ease-in-out 1s,
-            color 2s ease 4s, border-radius 4s ease-out 6s; */
-            transition: all 3s ease-in 2s;
-        }
-
-        button:hover {
-            background-color: yellowgreen;
-            color: black;
-            border-radius: 50%;
+        img:hover {
+            transform: translate(-500px, 150px);
         }
 
     </style>
 </head>
 <body>
-    <button>CSS Transition</button>
+    <img src="./img/kitten.jpg" alt="Kitten running in forest">
 </body>
 </html>
