transform scale function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         img:hover {
-            transform: translate(-500px, 150px);
+            transform: scale(2, 2);
         }
 
     </style>
