--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         img:hover {
-            transform: scale(2, 2);
+            transform: rotate(-0.5turn);
         }
 
     </style>
