--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         img:hover {
-            transform: rotate(-0.5turn);
+            transform: skew(20deg, 40deg);
         }
 
     </style>
