--- a/index.html
+++ b/index.html
@@ -12,29 +12,45 @@
             box-sizing: border-box;
         }
 
-        :root {
-            font-size: 10px;
-        }
-
         body {
-            perspective: 500px; /* distance between viewer and screen */
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        img {
-            width: 300px;
-            display: block;
-            margin: 200px auto;
+        a {
+            text-decoration: none;
+            color: #272727;
+            font-family: sans-serif;
+            font-size: 45px;
+            border: 5px solid #272727;
+            padding: 40px 80px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        a::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 120%;
+            height: 100%;
+            background:yellow;
+            z-index: -1;
+            transform-origin: bottom left;
+            transform: rotate(-90deg);
             transition: transform 1s;
         }
 
-        img:hover {
-            /* transform: rotateX(90deg); */
-            transform: rotateY(90deg);
+        a:hover::before {
+            transform: rotate(0);
         }
 
     </style>
 </head>
 <body>
-    <img src="./img/kitten.jpg" alt="Kitten running in forest">
+    <a href="#">Hover Me!</a>
 </body>
 </html>
