--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         a {
             text-decoration: none;
-            color: #272727;
+            color: #351435;
             font-family: sans-serif;
             font-size: 45px;
-            border: 5px solid #272727;
+            border: 5px solid #351435;
             padding: 40px 80px;
             position: relative;
             overflow: hidden;
@@ -32,20 +32,23 @@
 
         a::before {
             content: '';
+            z-index: -1;
             position: absolute;
             top: 0;
             left: 0;
-            width: 120%;
+            width: 100%;
             height: 100%;
-            background:yellow;
-            z-index: -1;
-            transform-origin: bottom left;
-            transform: rotate(-90deg);
-            transition: transform 1s;
+            background-color: #351435;
+            transform: translateX(-100%);
+            transition: all 1s;
         }
 
         a:hover::before {
-            transform: rotate(0);
+            transform: translateX(0);
+        }
+
+        a:hover {
+            color: white;
         }
 
     </style>
