--- a/index.html
+++ b/index.html
@@ -21,30 +21,39 @@
 
         a {
             text-decoration: none;
-            color: #351435;
+            color: #262626;
             font-family: sans-serif;
             font-size: 45px;
-            border: 5px solid #351435;
+            border: 5px solid #262626;
             padding: 40px 80px;
             position: relative;
             overflow: hidden;
         }
 
-        a::before {
+        a::before, a::after {
             content: '';
-            z-index: -1;
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #351435;
-            transform: translateX(-100%);
+            background-color: #262626;
             transition: all 1s;
+            z-index: -1;
+        }
+
+        a::before {
+            transform: rotateX(90deg);
+        }
+        a::after {
+            transform: rotateY(90deg);
         }
 
         a:hover::before {
-            transform: translateX(0);
+            transform: rotateX(0);
+        }
+        a:hover::after {
+            transform: rotateY(0);
         }
 
         a:hover {
