--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
     <title>CSS Animations</title>
     <style>
         * {
@@ -20,49 +23,28 @@
         }
 
         a {
-            text-decoration: none;
-            color: #262626;
-            font-family: sans-serif;
-            font-size: 45px;
-            border: 5px solid #262626;
             padding: 40px 80px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        a::before, a::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #262626;
-            transition: all 1s;
-            z-index: -1;
-        }
-
-        a::before {
-            transform: rotateX(90deg);
-        }
-        a::after {
-            transform: rotateY(90deg);
-        }
-
-        a:hover::before {
-            transform: rotateX(0);
-        }
-        a:hover::after {
-            transform: rotateY(0);
+            border: 3px solid #E1332D;
+            color: #E1332D;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 40px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 300;
+            letter-spacing: -2px;
+            transition: all 0.5s;
         }
 
         a:hover {
-            color: white;
+            font-weight: 900;
+            letter-spacing: 10px;
+            border: 7px solid #E1332D;
         }
+
 
     </style>
 </head>
 <body>
-    <a href="#">Hover Me!</a>
+    <a href="#">Button</a>
 </body>
 </html>
