--- a/index.html
+++ b/index.html
@@ -20,31 +20,45 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background: #222;
         }
 
         a {
+            position: relative;
             padding: 40px 80px;
-            border: 3px solid #E1332D;
-            color: #E1332D;
+            border: 3px solid white;
+            color: white;
             text-decoration: none;
-            text-transform: uppercase;
             font-size: 40px;
             font-family: 'Roboto', sans-serif;
-            font-weight: 300;
-            letter-spacing: -2px;
-            transition: all 0.5s;
+            overflow: hidden;
         }
 
-        a:hover {
-            font-weight: 900;
-            letter-spacing: 10px;
-            border: 7px solid #E1332D;
+        a::before {
+            content: 'YEAH!';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #F44336;
+            transform: translateY(-100%);
+            z-index: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: all 0.3s;
         }
+
+        a:hover::before {
+            transform: translateY(0);
+        }
+
 
 
     </style>
 </head>
 <body>
-    <a href="#">Button</a>
+    <a href="#">Hover Me!</a>
 </body>
 </html>
