--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+rea<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,34 +24,35 @@
         }
 
         a {
-            position: relative;
-            padding: 40px 80px;
-            border: 3px solid white;
-            color: white;
             text-decoration: none;
-            font-size: 40px;
+            color: white;
             font-family: 'Roboto', sans-serif;
+            font-size: 40px;
+            border: 3px solid white;
+            padding: 40px 80px;
+            position: relative;
+            transition: background .5s;
             overflow: hidden;
         }
 
-        a::before {
-            content: 'YEAH!';
+        a:hover {
+            background: #f44336;
+        }
+
+        a:before {
+            content: '';
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
-            background-color: #F44336;
-            transform: translateY(-100%);
-            z-index: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all 0.3s;
+            height: 50px;
+            background-color: white;
+            transform: translateX(-100%) rotate(45deg);
+            transition: transform .5s;
         }
 
-        a:hover::before {
-            transform: translateY(0);
+        a:hover:before {
+            transform: translate(100%) rotate(45deg);
         }
 
 
