--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-rea<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,41 +20,60 @@ rea<!DOCTYPE html>
             display: flex;
             justify-content: center;
             align-items: center;
-            background: #222;
         }
 
         a {
             text-decoration: none;
-            color: white;
+            background-color: #262626;
             font-family: 'Roboto', sans-serif;
             font-size: 40px;
-            border: 3px solid white;
+            border: 4px solid #262626;
             padding: 40px 80px;
             position: relative;
-            transition: background .5s;
+            transition: all .5s;
             overflow: hidden;
         }
 
-        a:hover {
-            background: #f44336;
-        }
-
         a:before {
-            content: '';
             position: absolute;
+            content: 'Hover Me!';
             top: 0;
             left: 0;
             width: 100%;
-            height: 50px;
-            background-color: white;
-            transform: translateX(-100%) rotate(45deg);
-            transition: transform .5s;
+            height: 100%;
+            background-color: #fffa65;
+            color: #262626;
+            font-size: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: all .5s;
         }
 
-        a:hover:before {
-            transform: translate(100%) rotate(45deg);
+        a:after {
+            position: absolute;
+            content: 'Hover Me!';
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #fffa65;
+            color: #262626;
+            font-size: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: all .5s;
+            transform: translate(-100%, 100%);
         }
 
+        a:hover::before {
+            transform: translate(100%, -100%);
+        }
+
+        a:hover::after {
+            transform: translate(0);
+        }
 
 
     </style>
