--- a/index.html
+++ b/index.html
@@ -22,44 +22,45 @@
             align-items: center;
         }
 
-        a {
-            text-decoration: none;
-            color: #262626;
-            font-family: 'Roboto', sans-serif;
-            font-size: 40px;
-            border: 3px solid #262626;
-            padding: 40px 80px;
-            position: relative;
+        .btn {
+            border: 2px solid tomato;
+            background: none;
+            color: tomato;
+            padding: 20px 40px;
+            font-size: 25px;
+            text-transform: uppercase;
+            cursor: pointer;
             transition: all .5s;
+            position: relative;
             overflow: hidden;
         }
 
-        a:before {
-            content: "Hover Me!";
+        .btn:hover {
+            color: white;
+        }
+
+        .btn:before {
+            content: "";
             position: absolute;
             top: 0;
             left: 0;
-            height: 105%;
-            width: 105%;
-            background-color: #262626;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transform: scale(5);
-            opacity: 0;
+            width: 100%;
+            height: 100%;
+            background-color: tomato;
+            z-index: -1;
+            border-radius: 0 0 50% 50%;
+            height: 0%;
             transition: all .5s;
         }
 
-        a:hover:before {
-            transform: scale(1);
-            opacity: 1;
+        .btn:hover:before {
+            height: 190%;
         }
 
 
     </style>
 </head>
 <body>
-    <a href="#">Hover Me!</a>
+    <button class="btn">Button</button>
 </body>
 </html>
