--- a/index.html
+++ b/index.html
@@ -19,48 +19,63 @@
             height: 100vh;
             display: flex;
             justify-content: center;
+            font-family: 'Roboto', sans-serif;
             align-items: center;
+            background-color: #212121;
         }
 
-        .btn {
-            border: 2px solid tomato;
-            background: none;
-            color: tomato;
+        a {
             padding: 20px 40px;
-            font-size: 25px;
+            text-decoration: none;
             text-transform: uppercase;
-            cursor: pointer;
-            transition: all .5s;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .btn:hover {
+            background-color: #f1c40f;
             color: white;
+            font-size: 20px;
+            letter-spacing: 2px;
+            position: relative;
         }
 
-        .btn:before {
-            content: "";
+        a:before {
+            content: 'Button';
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: tomato;
-            z-index: -1;
-            border-radius: 0 0 50% 50%;
-            height: 0%;
+            background-color: #2ce771;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transform: rotateX(270deg);
+            transform-origin: top;
             transition: all .5s;
         }
 
-        .btn:hover:before {
-            height: 190%;
+        a:after {
+            content: 'Button';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transform: rotateX(270deg);
+            transform-origin: bottom;
+            transition: all .5s;
+            transition-delay: .25s;
+        }
+
+        a:hover:before, a:hover:after {
+            transform: rotateX(0deg);
         }
 
 
     </style>
 </head>
 <body>
-    <button class="btn">Button</button>
+    <a href="#">Button</a>
 </body>
 </html>
