--- a/index.html
+++ b/index.html
@@ -19,59 +19,63 @@
             height: 100vh;
             display: flex;
             justify-content: center;
-            font-family: 'Roboto', sans-serif;
             align-items: center;
-            background-color: #212121;
+            font-family: 'Roboto', sans-serif;
+            background: grey;
         }
 
         a {
             padding: 20px 40px;
-            text-decoration: none;
             text-transform: uppercase;
-            background-color: #f1c40f;
-            color: white;
-            font-size: 20px;
-            letter-spacing: 2px;
+            text-decoration: none;
+            letter-spacing: 4px;
+            color: transparent;
+            border: 3px solid #ff0;
+            font-size: 30px;
             position: relative;
+            overflow: hidden;
         }
 
         a:before {
-            content: 'Button';
+            content: 'button';
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #2ce771;
+            background-color: #363636;
+            color: #ff0;
             display: flex;
             justify-content: center;
             align-items: center;
-            transform: rotateX(270deg);
-            transform-origin: top;
             transition: all .5s;
         }
 
         a:after {
-            content: 'Button';
+            content: 'button';
             position: absolute;
             top: 0;
-            left: 0;
+            left: -100%;
             width: 100%;
             height: 100%;
-            background-color: red;
+            background-color: #363636;
+            color: #ff0;
             display: flex;
             justify-content: center;
             align-items: center;
-            transform: rotateX(270deg);
-            transform-origin: bottom;
+            transform: scale(0) rotateY(0deg);
             transition: all .5s;
-            transition-delay: .25s;
         }
 
-        a:hover:before, a:hover:after {
-            transform: rotateX(0deg);
+        a:hover:before {
+            left: 100%;
+            transform: scale(0) rotateY(360deg);
         }
 
+        a:hover:after {
+            left: 0;
+            transform: scale(1) rotateY(360deg);
+        }
 
     </style>
 </head>
