--- a/index.html
+++ b/index.html
@@ -21,65 +21,86 @@
             justify-content: center;
             align-items: center;
             font-family: 'Roboto', sans-serif;
-            background: grey;
+            background-color: #272727;
         }
 
         a {
-            padding: 20px 40px;
-            text-transform: uppercase;
+            width: 220px;
+            height: 80px;
+            color: #ff0;
+            background-color: transparent;
+            font-size: 26px;
             text-decoration: none;
-            letter-spacing: 4px;
-            color: transparent;
-            border: 3px solid #ff0;
-            font-size: 30px;
+            text-transform: uppercase;
+            text-align: center;
+            line-height: 80px;
+            transition: all .5s;
             position: relative;
-            overflow: hidden;
+        }
+
+        a:before, a:after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            width: 20px;
+            height: 20px;
+            background-color: #ff0;
+            border-radius: 50%;
+            transform: translateY(-50%);
+            transition: all .3s;
+            z-index: -1;
+            opacity: 0;
         }
 
         a:before {
-            content: 'button';
-            position: absolute;
-            top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #363636;
-            color: #ff0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all .5s;
+            box-shadow: -100px 0 0 #ff0;
         }
 
         a:after {
-            content: 'button';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background-color: #363636;
-            color: #ff0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transform: scale(0) rotateY(0deg);
-            transition: all .5s;
+            right: 0;
+            box-shadow: 100px 0 0 #ff0;
         }
 
         a:hover:before {
-            left: 100%;
-            transform: scale(0) rotateY(360deg);
+            left: 50%;
+            box-shadow: 30px 0 0 #ff0;
+            transform: translateX(-50%) translateY(-50%);
+            opacity: 1;
         }
 
         a:hover:after {
-            left: 0;
-            transform: scale(1) rotateY(360deg);
+            right: 50%;
+            box-shadow: -30px 0 0 #ff0;
+            transform: translateX(50%) translateY(-50%);
+            opacity: 1;
         }
 
+        a span {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #ff0;
+            border-radius: 8px;
+            transform: scale(0);
+            transition: all .3s;
+            z-index: -1;
+        }
+
+        a:hover span {
+            transform: scale(1);
+            transition-delay: 0.4s;
+        }
+
+        a:hover {
+            color: #262626;
+            transition-delay: .4s;
+        }
     </style>
 </head>
 <body>
-    <a href="#">Button</a>
+    <a href="#"><span></span>Button</a>
 </body>
 </html>
