--- a/index.html
+++ b/index.html
@@ -21,67 +21,84 @@
             justify-content: center;
             align-items: center;
             font-family: 'Roboto', sans-serif;
+            background-color: #222;
         }
 
         a {
-            width: 300px;
-            height: 60px;
             text-decoration: none;
             text-transform: uppercase;
-            background-color: transparent;
-            text-align: center;
-            line-height: 60px;
-            font-weight: bold;
-            letter-spacing: 2px;
+            font-size: 25px;
+            color: #f6b93b;
+            letter-spacing: 3px;
+            padding: 25px 50px;
+            border: 3px solid #f6b93b;
+            transition: all .5s;
             position: relative;
+            overflow: hidden;
+        }
+
+        a:before,
+        a:after,
+        span:before,
+        span:after {
+            content: "";
+            position: absolute;
+            width: 25%;
+            height: 100%;
+            background-color: #f6b93b;
+            z-index: -1;
             transition: all .2s;
-            color: white;
         }
 
         a:before {
-            content: "";
-            position: absolute;
-            top: -3px;
-            left: -3px;
-            width: 100%;
-            height: 100%;
-            background-color: #20caff;
-            z-index: -1;
-            mix-blend-mode: multiply;
-            transition: all .2s;
-            transform-origin: top;
-        }
-
-        a:after {
-            content: "";
-            position: absolute;
-            top: 3px;
-            left: 3px;
-            width: 100%;
-            height: 100%;
-            background-color: #ff7675;
-            z-index: -1;
-            mix-blend-mode: multiply;
-            transition: all .2s;
-            transform-origin: bottom;
-        }
-
-        a:hover {
-            color: #272727;
+            top: 100%;
+            left: 0;
         }
 
         a:hover:before {
-            top: -6px;
-            transform: perspective(1000px) rotateX(75deg);
+            top: 0;
+            left: 0;
+        }
+
+        a:after {
+            top: -100%;
+            left: 25%;
+            transition-delay: 0.1s;
         }
 
         a:hover:after {
-            top: 6px;
-            transform: perspective(1000px) rotateX(-75deg);
+            top: 0;
+            left: 25%;
+        }
+
+        span:before {
+            bottom: -100%;
+            right: 25%;
+            transition-delay: 0.2s;
+        }
+
+        a:hover span:before {
+            bottom: 0;
+            right: 25%;
+        }
+
+        span:after {
+            top: -100%;
+            right: 0;
+            transition-delay: 0.3s;
+        }
+
+        a:hover span:after {
+            top: 0;
+            right: 0;
+        }
+
+        a:hover {
+            color: #222;
         }
     </style>
 </head>
 <body>
-    <a href="#">Button Hover Effect</a>
+    <a href="#"><span>Hover Me</span></a>
 </body>
 </html>
