--- a/index.html
+++ b/index.html
@@ -21,84 +21,57 @@
             justify-content: center;
             align-items: center;
             font-family: 'Roboto', sans-serif;
-            background-color: #222;
+            background-color: #212121;
         }
 
         a {
             text-decoration: none;
             text-transform: uppercase;
-            font-size: 25px;
-            color: #f6b93b;
+            font-size: 22px;
+            font-family: 'Inter', sans-serif;
             letter-spacing: 3px;
-            padding: 25px 50px;
-            border: 3px solid #f6b93b;
-            transition: all .5s;
+            height: 60px;
+            width: 200px;
+            line-height: 60px;
+            text-align: center;
+            color: #fdc518;
             position: relative;
-            overflow: hidden;
-        }
-
-        a:before,
-        a:after,
-        span:before,
-        span:after {
-            content: "";
-            position: absolute;
-            width: 25%;
-            height: 100%;
-            background-color: #f6b93b;
-            z-index: -1;
-            transition: all .2s;
         }
 
         a:before {
-            top: 100%;
+            content: "";
+            position: absolute;
             left: 0;
-        }
-
-        a:hover:before {
-            top: 0;
-            left: 0;
+            top: -15px;
+            width: 200px;
+            height: 90px;
+            border-left: 2px solid red;
+            border-right: 2px solid #fdc518;
+            transition: all 0.5s;
         }
 
         a:after {
-            top: -100%;
-            left: 25%;
-            transition-delay: 0.1s;
+            content: "";
+            position: absolute;
+            left: -15px;
+            top: 0;
+            width: 230px;
+            height: 60px;
+            border-top: 2px solid red;
+            border-bottom: 2px solid #fdc518;
+            transition: all 0.5s;
+        }
+
+        a:hover:before {
+            transform: rotateY(180deg);
         }
 
         a:hover:after {
-            top: 0;
-            left: 25%;
-        }
-
-        span:before {
-            bottom: -100%;
-            right: 25%;
-            transition-delay: 0.2s;
-        }
-
-        a:hover span:before {
-            bottom: 0;
-            right: 25%;
-        }
-
-        span:after {
-            top: -100%;
-            right: 0;
-            transition-delay: 0.3s;
-        }
-
-        a:hover span:after {
-            top: 0;
-            right: 0;
-        }
-
-        a:hover {
-            color: #222;
+            transform: rotateX(180deg);
         }
     </style>
 </head>
 <body>
-    <a href="#"><span>Hover Me</span></a>
+    <a href="#">Hover Me</a>
 </body>
 </html>
