--- a/index.html
+++ b/index.html
@@ -21,53 +21,64 @@
             justify-content: center;
             align-items: center;
             font-family: 'Roboto', sans-serif;
-            background-color: #212121;
+            overflow: hidden;
         }
 
-        button {
-            border: none;
-            padding: 12px 40px;
-            background-color: #c47135;
+        a {
+            text-decoration: none;
+            width: 160px;
+            height: 60px;
+            color: black;
+            border: 2px solid black;
+            text-align: center;
+            line-height: 60px;
+            font-size: 25px;
+            position: relative;
+            transition: all 0.8s;
+        }
+
+        a:hover {
             color: white;
-            font-family: 'Inter', sans-serif;
-            font-size: 22px;
-            text-transform: uppercase;
-            cursor: pointer;
+        }
+
+        a:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: black;
+            z-index: -1;
+            opacity: 0;
+            transition: all 0.2s;
+        }
+
+        a:hover:before {
+            opacity: 1;
+            transform: rotate(15deg);
+        }
+
+        a span {
+            color: transparent;
             position: relative;
         }
 
-        button:before {
-            content: "";
+        a span:before {
+            content: "B";
             position: absolute;
-            top: -5px;
-            left: -5px;
-            width: 24px;
-            height: 24px;
-            border-top: 2px solid #c47135;
-            border-left: 2px solid #c47135;
-            transition: all .25s;
+            color: black;
+            transition: all 0.2s;
         }
 
-        button:after {
-            content: "";
-            position: absolute;
-            bottom: -5px;
-            right: -5px;
-            width: 24px;
-            height: 24px;
-            border-bottom: 2px solid #c47135;
-            border-right: 2px solid #c47135;
-            transition: all .25s;
-        }
-
-        button:hover:before,
-        button:hover:after {
-            height: calc(100% + 8px);
-            width: calc(100% + 8px);
+        a:hover span:before {
+            font-size: 80px;
+            transform: translate(-65%, -10%) rotate(360deg);
+            color: white;
         }
     </style>
 </head>
 <body>
-    <button>submit</button>
+    <a href="#"><span>B</span>utton</a>
 </body>
 </html>
