--- a/index.html
+++ b/index.html
@@ -22,63 +22,89 @@
             align-items: center;
             font-family: 'Roboto', sans-serif;
             overflow: hidden;
+            background-color: #222;
         }
 
-        a {
-            text-decoration: none;
-            width: 160px;
-            height: 60px;
-            color: black;
-            border: 2px solid black;
-            text-align: center;
-            line-height: 60px;
-            font-size: 25px;
+        button {
+            background-color: transparent;
+            border: none;
             position: relative;
-            transition: all 0.8s;
-        }
-
-        a:hover {
+            width: 400px;
+            height: 120px;
+            text-transform: uppercase;
+            line-height: 120px;
+            text-align: center;
             color: white;
+            font-size: 45px;
+            letter-spacing: 15px;
+            cursor: pointer;
+            overflow: hidden;
         }
 
-        a:before {
+        button:before {
             content: "";
             position: absolute;
             top: 0;
-            left: 0;
+            left: -100%;
             width: 100%;
-            height: 100%;
-            background-color: black;
-            z-index: -1;
-            opacity: 0;
-            transition: all 0.2s;
+            height: 4px;
+            background-color: white;
+            transition: all 0.5s;
         }
 
-        a:hover:before {
-            opacity: 1;
-            transform: rotate(15deg);
+        button:hover:before {
+            left: 0;
         }
 
-        a span {
-            color: transparent;
-            position: relative;
-        }
-
-        a span:before {
-            content: "B";
+        button:after {
+            content: "";
             position: absolute;
-            color: black;
-            transition: all 0.2s;
+            right: -100%;
+            bottom: 0;
+            width: 100%;
+            height: 4px;
+            background-color: white;
+            transition: all 0.5s;
         }
 
-        a:hover span:before {
-            font-size: 80px;
-            transform: translate(-65%, -10%) rotate(360deg);
-            color: white;
+        button:hover:after {
+            right: 0;
         }
+
+        button span:before {
+            content: "";
+            position: absolute;
+            top: -100%;
+            right: 0;
+            width: 4px;
+            height: 100%;
+            background-color: white;
+            transition: all 0.5s;
+        }
+
+        button:hover span:before {
+            top: 0;
+        }
+
+        button span:after {
+            content: "";
+            position: absolute;
+            bottom: -100%;
+            left: 0;
+            width: 4px;
+            height: 100%;
+            background-color: white;
+            transition: all 0.5s;
+        }
+
+        button:hover span:after {
+            bottom: 0;
+        }
+
+
     </style>
 </head>
 <body>
-    <a href="#"><span>B</span>utton</a>
+    <button>button<span></span></button>
 </body>
 </html>
