--- a/index.html
+++ b/index.html
@@ -21,61 +21,63 @@
             justify-content: center;
             align-items: center;
             font-family: 'Roboto', sans-serif;
+            background-color: #10ac84;
         }
 
         a {
+            text-transform: uppercase;
             text-decoration: none;
-            width: 160px;
-            height: 60px;
-            color: black;
-            line-height: 60px;
-            text-align: center;
-            text-transform: capitalize;
-            font-size: 25px;
+            font-weight: 700;
             position: relative;
-            transition: all 0.2s;
-            overflow: hidden;
-        }
-
-        a span {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            background-color: transparent;
-            border: 2px solid black;
-            z-index: -1;
-        }
-
-        span:before {
-            content: "";
-            position: absolute;
-            width: 8%;
-            height: 500%;
-            background-color: white;
-            top: 50%;
-            left: 50%;
-            transition: all 0.2s;
-            transform: translate(-50%, -50%) rotate(-60deg);
-        }
-
-        a:hover span:before {
-            width: 100%;
-            background-color: black;
-            transform: translate(-50%, -50%) rotate(60deg);
-        }
-
-        a:hover {
+            letter-spacing: 7px;
+            padding: 18px 30px;
+            background: transparent;
+            font-size: 28px;
             color: white;
         }
 
+        a:before {
+            content: "";
+            position: absolute;
+            height: 100%;
+            width: 50%;
+            left: -1%;
+            top: -5px;
+            background-color: #ee5253;
+            transform: skewX(30deg);
+            z-index: -1;
+            transition: all .3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        }
+
+        a:hover:before {
+            left: 50%;
+            top: 0;
+            transform: skewX(0);
+        }
+
+        a:after {
+            content: "";
+            position: absolute;
+            height: 100%;
+            width: 50%;
+            top: 5px;
+            left: 51%;
+            background-color: #0a3d62;
+            transform: skewX(30deg);
+            z-index: -1;
+            transition: all .3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        }
+
+        a:hover:after {
+            left: 0;
+            top: 0;
+            transform: skewX(0);
+        }
     </style>
 </head>
 <body>
     <a href="#">
         button
-        <span></span>
     </a>
 </body>
 </html>
