--- a/index.html
+++ b/index.html
@@ -25,59 +25,47 @@
         }
 
         a {
-            text-transform: uppercase;
+            position: absolute;
             text-decoration: none;
-            font-weight: 700;
-            position: relative;
-            letter-spacing: 7px;
-            padding: 18px 30px;
-            background: transparent;
-            font-size: 28px;
-            color: white;
+            text-transform: uppercase;
+            padding: 25px 50px;
+            background-color: white;
+            color: #777;
+            border-radius: 100px;
+            font-size: 24px;
+            transition: all .2s;
         }
 
         a:before {
             content: "";
             position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
             height: 100%;
-            width: 50%;
-            left: -1%;
-            top: -5px;
-            background-color: #ee5253;
-            transform: skewX(30deg);
+            background-color: white;
+            border-radius: 100px;
+            transition: all .4s;
             z-index: -1;
-            transition: all .3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
         }
 
         a:hover:before {
-            left: 50%;
-            top: 0;
-            transform: skewX(0);
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
         }
 
-        a:after {
-            content: "";
-            position: absolute;
-            height: 100%;
-            width: 50%;
-            top: 5px;
-            left: 51%;
-            background-color: #0a3d62;
-            transform: skewX(30deg);
-            z-index: -1;
-            transition: all .3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        a:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.2);
         }
 
-        a:hover:after {
-            left: 0;
-            top: 0;
-            transform: skewX(0);
+        a:active {
+            transform: translateY(-1px);
+            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
         }
-    </style>
+        </style>
 </head>
 <body>
-    <a href="#">
-        button
-    </a>
+    <a href="#">hover me</a>
 </body>
 </html>
