--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         align-items: center;
         color: white;
         transition: all 0.5s;
-        opacity: 0;
-        background: transparent;
+        transform: translateX(-100%);
       }
 
       .caption h1 {
@@ -65,12 +64,12 @@
       }
 
       .container:hover .caption {
-        background: rgba(0, 0, 0, 0.5);
-        opacity: 1;
+        background-color: rgba(0,0,0,0.5);
+        transform: translateX(0);
       }
 
       .container:hover img {
-        transform: rotate(15deg) scale(1.3);
+        transform: scale(1.3) rotate(-15deg);
       }
     </style>
   </head>
